# haskell-playground

./: playground.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/1da69721/: cabal_macros.h
aoc-test/2022/: day1.hs
aoc-test/2023/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
aoc-test/2023/src/: day1.hs
ch1/: FuncWithLet.hs
ch2/: learn.hs  print.hs  rev.hs  test.hs
ch3/: ch3.hs
ch4/: ch4.hs
ch5/: ch5.hs
ch6/: ch6.hs  intermission.hs
ch7/: arith2.hs  arith4.hs  ch7.hs  intermission.hs  penguins.hs  regUser2.hs
ch8/: answers.md  intermission.hs  wordNumber.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
parsing/: parser.hs
