name:                playground
version:             0.1.0.0
synopsis:            A simple Haskell playground project
description:         This is a simple Haskell project for experimentation and learning.
license:             MIT
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules:     Main
    hs-source-dirs:      src
    build-depends:       base >=4.7 && <5
    default-language:    Haskell2010

executable playground
    main-is:             Main.hs
    hs-source-dirs:      app
    build-depends:       base >=4.7 && <5, playground
    default-language:    Haskell2010